[ADD]: Testes Unitários + Testes de integração (Casos de Teste)